@@ -7,6 +7,9 @@
 package com.hp.hpl.jena.sparql.modify.op;
 
 import com.hp.hpl.jena.graph.Node;
+
+import com.hp.hpl.jena.sparql.engine.binding.Binding;
+
 import com.hp.hpl.jena.update.GraphStore;
 
 
@@ -31,6 +34,13 @@ public abstract class GraphMgt extends Update
     
     abstract
     public void exec(GraphStore graphStore, Node iri) ;
+    
+    //@Override 
+    final public void exec(GraphStore graphStore, Binding binding)
+    {
+        // Ignore binding.
+        exec(graphStore, iri) ;
+    }
     
     //@Override 
     final public void exec(GraphStore graphStore)
